--- a/index.html
+++ b/index.html
@@ -188,11 +188,115 @@
             </div>
         </section>
 
+        <section class="partners section">
+            <div class="partners__container container">
+                <div class="partners__top">
+                    <h2 class="partners__title title">
+                        Мы воплощаем в жизнь наших
+                        <br>
+                        клиентов новые технологии
+                    </h2>
+                </div>
+                <div class="swiper partnersSwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (2).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (3).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (4).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (5).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (7).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (8).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (9).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (10).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (11).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (12).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (13).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (7).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (8).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (9).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (10).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (11).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (12).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (13).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
+                            </div>
+                            <div class="partners__card">
+                                <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="contact">
             <div class="contact__container container row">
                 <div class="col-md-6 col-xs-12 justify">
                     <div>
-                        <h2 class="contact__title">
+                        <h2 class="contact__title title">
                             Оставьте 
                             <br>
                             заявку
@@ -235,6 +339,14 @@
                     </form>
                 </div>
             </div>
+        </section>
+
+        <section class="reviews">
+
+        </section>
+
+        <section class="blog">
+
         </section>
 
     </main>
@@ -305,7 +417,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
