contact and partners fix

--- a/index.html
+++ b/index.html
@@ -196,96 +196,96 @@
                         <br>
                         клиентов новые технологии
                     </h2>
-                </div>
-                <div class="swiper partnersSwiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (2).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (3).png" class="partners__pic" alt="">
-                            </div>
+                </div>          
+            </div>
+            <div class="swiper partnersSwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (4).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (5).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
-                            </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (2).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (7).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (8).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (9).png" class="partners__pic" alt="">
-                            </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (3).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (10).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (11).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (12).png" class="partners__pic" alt="">
-                            </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (4).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (13).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
-                            </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (5).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (7).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (8).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (9).png" class="partners__pic" alt="">
-                            </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (10).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (11).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (12).png" class="partners__pic" alt="">
-                            </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (7).png" class="partners__pic" alt="">
                         </div>
-                        <div class="swiper-slide">
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (13).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
-                            </div>
-                            <div class="partners__card">
-                                <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
-                            </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (8).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (9).png" class="partners__pic" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (10).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (11).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (12).png" class="partners__pic" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (13).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (7).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (8).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (9).png" class="partners__pic" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (10).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (11).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (12).png" class="partners__pic" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (13).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (1).png" class="partners__pic" alt="">
+                        </div>
+                        <div class="partners__card">
+                            <img src="./img/logo/image-removebg-preview (6).png" class="partners__pic" alt="">
                         </div>
                     </div>
                 </div>
@@ -326,9 +326,34 @@
                             <p class="con__select-title">
                                 О проекте   
                             </p>
-
+                            <div class="flexer__select row">
+                                  <div class="col-4 pe-0">
+                                    <input type="radio" id="test1" name="radio-group" checked>
+                                    <label class="radiohead" for="test1">
+                                        <p class="radio__txt">
+                                            Веб-разработка
+                                        </p>
+                                    </label>
+                                  </div>
+                                  <div class="col-4 p-0">
+                                    <input type="radio" id="test2" name="radio-group">
+                                    <label class="radiohead" for="test2">
+                                        <p class="radio__txt">
+                                            Реклама
+                                        </p>
+                                    </label>
+                                  </div>
+                                  <div class="col-4 ps-0">
+                                    <input type="radio" id="test3" name="radio-group">
+                                    <label class="radiohead" for="test3">
+                                        <p class="radio__txt">
+                                            Брендинг
+                                        </p>
+                                    </label>
+                                  </div>
+                            </div>
                         </div>
-                        <textarea name="Задача"  placeholder = "text" class="con__textarea">
+                        <textarea name="Задача"  placeholder="Сообщение" class="con__textarea">
 
                         </textarea>
                         <div class="home__button con__button-wrapper">
