--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
                 <div class="col-md-6 col-xs-12">
                     <form action="" class="contact__form">
                         <div class="flexer d-flex">
-                            <input type="text" placeholder="Имя" class="con__input w-50">
-                            <input type="text" placeholder="Телефон" class="con__input w-50">
+                            <input type="text" placeholder="Имя" class="con__input w-50" required>
+                            <input type="text" placeholder="Телефон" id="telNum" class="con__input w-50" required>
                         </div>
-                        <input type="text" placeholder="Почта" class="con__input">
+                        <input type="text" placeholder="Почта" class="con__input" required>
                         <div class="con__select">
                             <p class="con__select-title">
                                 О проекте   
@@ -443,6 +443,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/imask"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
