add reviews block

--- a/index.html
+++ b/index.html
@@ -366,8 +366,114 @@
             </div>
         </section>
 
-        <section class="reviews">
-
+        <section class="reviews section pt-0">
+            <div class="reviews__container container">
+                <div class="rev__top">
+                    <h2 class="rev__title title">
+                        Отзывы
+                    </h2>
+                </div>
+                <div class="swiper revSwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="rev__card">
+                                <div class="rev__card-top">
+                                    <div class="rev__card-img">
+                                        <img src="./img/carrot.jpg" alt="" class="rev__card-pic">
+                                    </div>
+                                    <div class="rev__card-person">
+                                        <p class="rev__card-name">
+                                            Бахадиров Ибрагим
+                                        </p>
+                                        <p class="rev__card-status">
+                                            Директор Artel Групп
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="rev__card-content">
+                                    <p class="rev__card-txt">
+                                        Информационные технологии — отрасль, в которой хотят работать многие. Программирование, тестирование, администрирование, аналитика — эти и другие направления востребованы в сфере ИТ. В восприятии одних, работа в ИТ-компании — работа мечты, но и рутина глазами других
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="rev__card">
+                                <div class="rev__card-top">
+                                    <div class="rev__card-img">
+                                        <img src="./img/itpedia.jpg" alt="" class="rev__card-pic">
+                                    </div>
+                                    <div class="rev__card-person">
+                                        <p class="rev__card-name">
+                                            Бахадиров Ибрагим
+                                        </p>
+                                        <p class="rev__card-status">
+                                            Директор Artel Групп
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="rev__card-content">
+                                    <p class="rev__card-txt">
+                                        Про ИТ-сферу очень много разнородной информации. С одной стороны, положительной: про высокие зарплаты, сотрудников на бентли с несколькими квартирами и свободным графиком работы. С другой стороны, все знают, что войти в ИТ под силу не каждому: высокие требования к кандидатам и конкуренция усложняют процесс
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="rev__card">
+                                <div class="rev__card-top">
+                                    <div class="rev__card-img">
+                                        <img src="./img/AVATAR.jpg" alt="" class="rev__card-pic">
+                                    </div>
+                                    <div class="rev__card-person">
+                                        <p class="rev__card-name">
+                                            Бахадиров Ибрагим
+                                        </p>
+                                        <p class="rev__card-status">
+                                            Директор Artel Групп
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="rev__card-content">
+                                    <p class="rev__card-txt">
+                                        Мы решили вместе с разработчиками, тестировщиками и бизнес-аналитиками ISsoft обсудить плюсы и минусы ИТ-индустрии, а еще ребята поделились своей историей прихода в сферу ИТ. Видео и текстовые отзывы читайте ниже. Для тех, кто не любит лонгриды, мы подготовили краткий обзор положительных и отрицательных моментов ИТ, о которых рассказали наши интервьюеры
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="rev__card">
+                                <div class="rev__card-top">
+                                    <div class="rev__card-img">
+                                        <img src="./img/jisoo__ava.PNG" alt="" class="rev__card-pic">
+                                    </div>
+                                    <div class="rev__card-person">
+                                        <p class="rev__card-name">
+                                            Бахадиров Ибрагим
+                                        </p>
+                                        <p class="rev__card-status">
+                                            Директор Artel Групп
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="rev__card-content">
+                                    <p class="rev__card-txt">
+                                        Информационные технологии — отрасль, в которой хотят работать многие. Программирование, тестирование, администрирование, аналитика — эти и другие направления востребованы в сфере ИТ. В восприятии одних, работа в ИТ-компании — работа мечты, но и рутина глазами других
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btns">
+                        <div class="left-arrow swiper-button-prev">
+                            <img src="./img/logo/left-slider.svg" alt="">
+                        </div>
+                        <div class="right-arrow swiper-button-next">
+                            <img src="./img/logo/right-slider.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="blog">
