--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         Отзывы
                     </h2>
                 </div>
-                <div class="swiper revSwiper">
+                <div class="swiper revSwiper" id="reviews">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="rev__card">
@@ -393,14 +393,6 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="btns">
-                        <div class="left-arrow swiper-button-prev">
-                            <img src="./img/logo/left-slider.svg" alt="">
-                        </div>
-                        <div class="right-arrow swiper-button-next">
-                            <img src="./img/logo/right-slider.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -667,6 +659,16 @@
         </div>
     </footer>
 
+    <div class="cursor" id="cursor">
+        <div class="btns">
+            <div class="left-arrow swiper-button-prev">
+                <img src="./img/logo/left-slider.svg" alt="">
+            </div>
+            <div class="right-arrow swiper-button-next">
+                <img src="./img/logo/right-slider.svg" alt="">
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/imask"></script>
