add serv__inner page

--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                     <div class="serv__card">
-                        <a href="#" class="serv__card-link">
+                        <a href="services__inner.html" class="serv__card-link">
                             <div class="card__wrapper">
                                 <div class="serv__card-content">
                                     <h4 class="serv__card-title">
