--- a/services__inner.html
+++ b/services__inner.html
@@ -31,10 +31,26 @@
                         Uzb
                     </a>
                 </div>
-                <div class="navbar__toggler">
+                <div class="navbar__toggler" id="toggle">
                     <div class="toggle">
                         
                     </div>
+                </div>
+            </div>
+            <div class="navbar__collapse" id="collapse">
+                <div class="navbar__content">
+                    <a href="services.html" class="navbar__link">
+                        Services
+                    </a>
+                    <a href="portfolio.html" class="navbar__link">
+                        Portfolio                        
+                    </a>
+                    <a href="#" class="navbar__link">
+                        About
+                    </a>
+                    <a href="#" class="navbar__link">
+                        Contacts                     
+                    </a>
                 </div>
             </div>
         </div>
