--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
                 <div class="page__top-sec row">
                     <div class="col-md-6 col-xs-12">
                         <div class="home__button ">
-                            <button class="home__btn parallax-button">
+                            <button onclick="window.location.href='#tabs'" class="home__btn parallax-button">
                                 <svg width="45" class="home__btn-svg no__transform" height="88" viewBox="0 0 45 88" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M22.3098 87.2134L22.3098 0.264986M22.3098 87.2134C19.0492 71.9975 15.7886 63.3026 0.572652 54.6078M22.3098 87.2134C25.5703 71.9975 28.8309 63.3026 44.0469 54.6078" stroke="white" stroke-width="1.4"/>
                                 </svg> 
@@ -84,7 +84,7 @@
                     </div>
                 </div>
 
-                <section class="tabs section">
+                <section class="tabs section" id="tabs">
                     <div class="tabs-container container p-0">
                         <div class="tabs-top">
                             <h4 class="tab__title">
@@ -107,7 +107,7 @@
                         <div class="active__tab tabs__content" data-content id="brand">
                             <section class="inner__row row section p-0">
                                 <div class="col-md-6 col-xs-12">
-                                    <div class="inner__small-card">
+                                    <a href="portfolio__inner.html" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
                                             <img src="./img/serv__inner1.jpg" alt="" class="inner__small-pic">
                                         </div>
@@ -119,8 +119,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__small-card">
+                                    </a>
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
                                             <img src="./img/serv__inner2.jpg" alt="" class="inner__small-pic">
                                         </div>
@@ -132,8 +132,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__small-card">
+                                    </a>
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
                                             <img src="./img/serv__inner3.jpg" alt="" class="inner__small-pic">
                                         </div>
@@ -145,10 +145,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="col-md-6 col-xs-12">
-                                    <div class="inner__big-card">
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
                                             <img src="./img/serv__inner4.jpg" alt="" class="inner__big-pic">
                                         </div>
@@ -160,8 +160,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__big-card">
+                                    </a>
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
                                             <img src="./img/serv__inner5.jpg" alt="" class="inner__big-pic">
                                         </div>
@@ -173,8 +173,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__big-card">
+                                    </a>
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
                                             <img src="./img/serv__inner6.jpg" alt="" class="inner__big-pic">
                                         </div>
@@ -186,7 +186,7 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="reload__button">
                                     <button class="reload__btn parallax-button">
@@ -200,7 +200,7 @@
                         <div class="tabs__content" data-content id="uix">
                             <section class="inner__row row section p-0">
                                 <div class="col-md-6 col-xs-12">
-                                    <div class="inner__small-card">
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
                                             <img src="./img/sana.jpg" alt="" class="inner__small-pic">
                                         </div>
@@ -212,8 +212,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__small-card">
+                                    </a>
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
                                             <img src="./img/sana2.jpg" alt="" class="inner__small-pic">
                                         </div>
@@ -225,10 +225,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__small-card">
+                                    </a>
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
-                                            <img src="./img/nancy.PNG" alt="" class="inner__small-pic">
+                                            <img src="./img/sana3.jpg" alt="" class="inner__small-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -238,10 +238,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="col-md-6 col-xs-12">
-                                    <div class="inner__big-card">
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
                                             <img src="./img/jisoo.jpg" alt="" class="inner__big-pic">
                                         </div>
@@ -253,8 +253,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__big-card">
+                                    </a>
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
                                             <img src="./img/jisoo__bp.jpg" alt="" class="inner__big-pic">
                                         </div>
@@ -266,8 +266,8 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__big-card">
+                                    </a>
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
                                             <img src="./img/chae.jpg" alt="" class="inner__big-pic">
                                         </div>
@@ -279,7 +279,7 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="reload__button">
                                     <button class="reload__btn parallax-button">
@@ -293,9 +293,9 @@
                         <div class="tabs__active tabs__content" data-content id="pack">
                             <section class="inner__row row section p-0">
                                 <div class="col-md-6 col-xs-12">
-                                    <div class="inner__small-card">
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
-                                            <img src="./img/nami.jpg" alt="" class="inner__small-pic">
+                                            <img src="./img/serv__inner1.jpg" alt="" class="inner__small-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -305,10 +305,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__small-card">
+                                    </a>
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
-                                            <img src="./img/robin.jpg" alt="" class="inner__small-pic">
+                                            <img src="./img/serv__inner2.jpg" alt="" class="inner__small-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -318,10 +318,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__small-card">
+                                    </a>
+                                    <a href="#" class="inner__small-card small__link-card">
                                         <div class="inner__small-img">
-                                            <img src="./img/rukiya.jpg" alt="" class="inner__small-pic">
+                                            <img src="./img/serv__inner3.jpg" alt="" class="inner__small-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -331,12 +331,12 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="col-md-6 col-xs-12">
-                                    <div class="inner__big-card">
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
-                                            <img src="./img/sanji.png" alt="" class="inner__big-pic">
+                                            <img src="./img/serv__inner4.jpg" alt="" class="inner__big-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -346,10 +346,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__big-card">
+                                    </a>
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
-                                            <img src="./img/mugiwara.jpg" alt="" class="inner__big-pic">
+                                            <img src="./img/serv__inner5.jpg" alt="" class="inner__big-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -359,10 +359,10 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
-                                    <div class="inner__big-card">
+                                    </a>
+                                    <a href="#" class="inner__big-card big__link-card">
                                         <div class="inner__big-img">
-                                            <img src="./img/mugiwara2.jpg" alt="" class="inner__big-pic">
+                                            <img src="./img/serv__inner6.jpg" alt="" class="inner__big-pic">
                                         </div>
                                         <div class="inner__card-content">
                                             <p class="inner__card-name">
@@ -372,7 +372,7 @@
                                                 Branding, 2021
                                             </p>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="reload__button">
                                     <button class="reload__btn parallax-button">
