--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <a href="portfolio.html" class="navbar__link">
                         Portfolio                        
                     </a>
-                    <a href="#" class="navbar__link">
+                    <a href="about.html" class="navbar__link">
                         About
                     </a>
-                    <a href="#" class="navbar__link">
+                    <a href="contact.html" class="navbar__link">
                         Contacts                     
                     </a>
                 </div>
