--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,77 @@
         </div>
     </nav>
 
-    <main class="main">
-
+    <main class="main section">
+        <div class="big__map">
+            <div class="big__map-container container">
+                <h1 class="big__map-title page__title">
+                    Будем рады быть с вами на связи!
+                </h1>
+                <div class="map__wrapper">
+                    <div class="map">
+                        <iframe style="filter: invert(90%);" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14836.333057293157!2d107.90467061292439!3d21.62167886373809!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1648111779589!5m2!1sru!2s" width="100%" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="map__form">
+                        <div class="form__grid">
+                            <div>
+                                <p class="form__name">
+                                    Телефон
+                                </p>
+                                <p class="form__txt">
+                                    +998 97 571 66 66
+                                </p>
+                            </div>
+                            <div>
+                                <p class="form__name">
+                                    Адрес
+                                </p>
+                                <p class="form__txt">
+                                    Узбекистан, Ташкентский
+                                    Сергелийский район
+                                </p>    
+                            </div>
+                            <div>
+                                <p class="form__name">
+                                    Общие вопросы
+                                </p>
+                                <p class="form__txt">
+                                    info@ndc.uz
+                                </p>
+                            </div>
+                            <div>
+                                <p class="form__name">
+                                    PR и мероприятия
+                                </p>
+                                <p class="form__txt">
+                                    pr@buroburo.ru
+                                </p>
+                            </div>
+                        </div>
+                        <form>
+                            <input type="text" placeholder="Имя" class="map__input">
+                            <input type="text" placeholder="Телефон" class="map__input">
+                            <input type="text" placeholder="Почта" class="map__input">
+                            <input type="text" placeholder="Сообщения" class="map__input">
+                            <div class="d-flex">
+                                <div class="d-flex align-items-center">
+                                    <input type="checkbox" name="checkbox" id="checkbox">
+                                    <label class="checkbox__txt ms-2" for="checkbox">
+                                        Настоящим подтверждаю, что я ознакомлен и согласен с <a href="#" class="linko">политикой обработки персональных данных</a>
+                                    </label>
+                                </div>
+                                <div class="home__button con__button-wrapper">
+                                    <button class="home__btn parallax-button reverse__colors" style="margin-bottom: -25%;">
+                                        <svg class="home__btn-svg" width="70" height="44" viewBox="0 0 70 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path class="path" d="M68.8805 3.11354L0.426346 42.6356M68.8805 3.11354C58.3831 12.5969 53.0198 19.1162 53.0907 35.0478M68.8805 3.11354C55.419 7.46286 47.0915 8.84803 33.3297 0.820759" stroke="white" stroke-width="1.4"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
