--- a/contact.html
+++ b/contact.html
@@ -103,13 +103,13 @@
                             </div>
                         </div>
                         <form>
-                            <input type="text" placeholder="Имя" class="map__input">
-                            <input type="text" placeholder="Телефон" class="map__input">
-                            <input type="text" placeholder="Почта" class="map__input">
+                            <input type="text" placeholder="Имя" class="map__input" required>
+                            <input type="text" placeholder="Телефон" class="map__input" required>
+                            <input type="email" placeholder="Почта" class="map__input" required>
                             <input type="text" placeholder="Сообщения" class="map__input">
                             <div class="d-flex">
                                 <div class="d-flex align-items-center">
-                                    <input type="checkbox" name="checkbox" id="checkbox">
+                                    <input type="checkbox" name="checkbox" id="checkbox" required>
                                     <label class="checkbox__txt ms-2" for="checkbox">
                                         Настоящим подтверждаю, что я ознакомлен и согласен с <a href="#" class="linko">политикой обработки персональных данных</a>
                                     </label>
