--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
     <nav class="navbar" id="navbar">
         <div class="navbar__container container">
             <div class="navbar__brand">
@@ -560,7 +560,7 @@
                             <input type="text" placeholder="Имя" class="con__input w-50" required>
                             <input type="text" placeholder="Телефон" id="telNum" class="con__input w-50" required>
                         </div>
-                        <input type="text" placeholder="Почта" class="con__input" required>
+                        <input type="email" placeholder="Почта" class="con__input" required>
                         <div class="con__select">
                             <p class="con__select-title">
                                 О проекте   
