--- a/about.html
+++ b/about.html
@@ -474,7 +474,7 @@
                             <input type="text" placeholder="Имя" class="con__input w-50" required>
                             <input type="text" placeholder="Телефон" id="telNum" class="con__input w-50" required>
                         </div>
-                        <input type="text" placeholder="Почта" class="con__input" required>
+                        <input type="email" placeholder="Почта" class="con__input" required>
                         <div class="con__select">
                             <p class="con__select-title">
                                 О проекте   
