--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
                             <input type="text" placeholder="Телефон" class="map__input" required>
                             <input type="email" placeholder="Почта" class="map__input" required>
                             <input type="text" placeholder="Сообщения" class="map__input">
-                            <div class="d-flex">
+                            <div class="d-flex uzi">
                                 <div class="d-flex align-items-center">
                                     <input type="checkbox" name="checkbox" id="checkbox" required>
                                     <label class="checkbox__txt ms-2" for="checkbox">
