--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <main class="main">
         <section class="home">
+            <div id="particles-js"></div>
             <div class="home__container container">
                 <div class="home__content">
                     <h1 class="home__title">
@@ -688,6 +689,7 @@
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/imask"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
